--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "bootstrap": "^3.3.7",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ngx-chips": "^1.6.7",
@@ -46,6 +47,8 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "codelyzer": "^4.0.1",
+    "cross-env": "^5.1.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,6 +58,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mailgun-js": "^0.16.0",
     "nodemon": "^1.17.1",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
