--- a/package.json
+++ b/package.json
@@ -1,69 +1,70 @@
 {
-  "name": "ng-email",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "server:dev": "nodemon server-start.js --exec babel-node"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "bootstrap": "^3.3.7",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "ngx-chips": "^1.6.7",
-    "ngx-loading": "^1.0.14",
-    "primeng": "^5.2.3",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
-    "@angular/cli": "^1.6.8",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "codelyzer": "^4.0.1",
-    "cross-env": "^5.1.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.2",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "joi": "^13.1.2",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "mailgun-js": "^0.16.0",
-    "nodemon": "^1.17.1",
-    "protractor": "~5.1.2",
-    "querystring": "^0.2.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
-  }
+    "name": "ng-email",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --proxy-config proxy.conf.json",
+        "build": "ng build --prod && babel server -d dist",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "server:dev": "nodemon server-start.js --exec babel-node",
+        "serve": "node dist/index.js"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^5.2.0",
+        "@angular/common": "^5.2.0",
+        "@angular/compiler": "^5.2.0",
+        "@angular/core": "^5.2.0",
+        "@angular/forms": "^5.2.0",
+        "@angular/http": "^5.2.0",
+        "@angular/platform-browser": "^5.2.0",
+        "@angular/platform-browser-dynamic": "^5.2.0",
+        "@angular/router": "^5.2.0",
+        "bootstrap": "^3.3.7",
+        "classlist.js": "^1.1.20150312",
+        "core-js": "^2.4.1",
+        "font-awesome": "^4.7.0",
+        "ngx-chips": "^1.6.7",
+        "ngx-loading": "^1.0.14",
+        "primeng": "^5.2.3",
+        "rxjs": "^5.5.6",
+        "zone.js": "^0.8.19"
+    },
+    "devDependencies": {
+        "@angular/cli": "^1.6.8",
+        "@angular/compiler-cli": "^5.2.0",
+        "@angular/language-service": "^5.2.0",
+        "@types/jasmine": "~2.8.3",
+        "@types/jasminewd2": "~2.0.2",
+        "@types/node": "~6.0.60",
+        "axios": "^0.18.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "body-parser": "^1.18.2",
+        "codelyzer": "^4.0.1",
+        "cross-env": "^5.1.4",
+        "dotenv": "^5.0.1",
+        "express": "^4.16.2",
+        "jasmine-core": "~2.8.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "joi": "^13.1.2",
+        "karma": "~2.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "mailgun-js": "^0.16.0",
+        "nodemon": "^1.17.1",
+        "protractor": "~5.1.2",
+        "querystring": "^0.2.0",
+        "ts-node": "~4.1.0",
+        "tslint": "~5.9.1",
+        "typescript": "~2.5.3"
+    }
 }
